# StockMon

./: .gitignore  LICENSE  README.md  TERMS_OF_SERVICE.md  pyproject.toml
stockmon/config/: settings.py  urls.py
stockmon/index/: urls.py  views.py
stockmon/index/templates/index/: about.html  home.html
stockmon/index/templates/index/includes/: footer.html  head.html  header.html  scripts.html
stockmon/index/templates/index/layouts/: base.html
stockmon/portfolio/: forms.py  models.py  urls.py  views.py
stockmon/portfolio/migrations/: 0001_initial.py  0002_alter_portfolio_options_alter_stockportfolio_options_and_more.py  0003_portfolio_date_created_portfolio_date_modified_and_more.py  0004_alter_stockportfolio_stock.py
stockmon/stock/: models.py  services.py  urls.py  views.py
stockmon/stock/migrations/: 0001_initial.py  0002_alter_stock_country_alter_stock_industry_and_more.py  0003_alter_stock_options_alter_stock_country_and_more.py  0004_stock_date_created_stock_date_modified.py
stockmon/stock/templates/stock/: company_profile.html  history.html  symbols.html
stockmon/transactions/: models.py  urls.py
stockmon/transactions/migrations/: 0001_initial.py  0002_alter_stocktransaction_options_and_more.py
